<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DificuldadeEasy">

    <include
        layout="@layout/layout_normal"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="194dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTituloNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/alegreya_sc"
            android:inputType="textPersonName"
            android:text="@string/txtDificuldadeNormal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPontuacao"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/alegreya_sc"
                android:text="@string/txtPontuação"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/edtPontuacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alegreya_sc"
                android:text="@string/edtPontuacao"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>